styles/_layout.scss
/*==================== REUSABLE CSS CLASSES ====================*/
.section {
    padding: var(--mb-2) 0;
}

.section__header {
    margin-bottom: var(--mb-3);
    text-align: center;
}

.section__subtitle {
    font-size: var(--small-font-size);
    display: block;
}

.full-screen {
    height: calc(100vh - var(--header-height));
}

.centered {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}


/* ===== timeline ===== */

.timeline {
    padding: 0 var(--mb-0-5);
}

.timeline__rounder {
    display: block;
    width: 13px;
    height: 13px;
    background-color: var(--border-color);
    border-radius: 50%;
}

.timeline__line {
    display: block;
    width: 1px;
    height: calc(100% - .5rem - 13px);
    background-color: var(--border-color);
    transform: translate(6px, .25rem);
}

/* ===== card ===== */

.card {
    background-color: var(--container-color);
    border-radius: var(--border-radius);
    padding: var(--mb-1) var(--mb-1-5);
    //margin-bottom: var(--mb-1-5);
    box-shadow: 0 0 .25rem var(--shadow-color);
}

.card:hover {
    box-shadow: 0 0 .5rem var(--shadow-color-intense);
}

.card__title {
    font-size: var(--normal-font-size);
    font-weight: var(--font-medium);
}

.card__subtitle {
    display: inline-block;
    font-size: var(--normal-font-size);
    white-space: nowrap;
}

.flex {
    display: flex;
    align-items: center;
    gap: var(--mb-0-25);
}

/*==================== LAYOUT ====================*/

.container {
    max-width: calc(748px - var(--mb-3));
    margin: 0 var(--mb-1-5);
}

.grid {
    display: grid;
    gap: var(--mb-1-5);
}

// Extra Small devices (350px and down)
@media screen and (max-width: 350px) {
    .container {
        margin: 0 var(--mb-1);
    }
}

// Small devices (landscape phones, 576px and up)
@media (min-width: 576px) {
    .container {
        margin: 0 var(--mb-3);
    }
}

// Medium devices (tablets, 768px and up)
@media (min-width: 768px) {
    .container {
        margin: 0 auto;
    }

    .section {
        padding: var(--mb-3) 0;
    }

}

// Large devices (desktops, 992px and up)
@media (min-width: 992px) {
    .container {
        margin: 0 auto;
    }
}

// Extra large devices (large desktops, 1200px and up)
@media (min-width: 1200px) {}

